--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/*Google Font Family */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap');
 
 * {
   box-sizing: border-box;
@@ -11,6 +9,10 @@ body {
   line-height: 1.6;
   background-color: #f9ea8f;
   background-image: linear-gradient(315deg, #f9ea8f 0%, #aff1da 74%);
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 ul {
